--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^2.28.0",
     "geolib": "^3.3.3",
     "mapbox-gl": "^2.7.0",
+    "mongoose": "^6.2.6",
     "next": "latest",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
