--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mapbox-gl": "^2.7.0",
     "mongoose": "^6.2.6",
     "next": "latest",
+    "next-auth": "^4.3.1",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
