--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "@badrap/bar-of-progress": "^0.1.2",
     "@heroicons/react": "^1.0.6",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.28.0",
     "geolib": "^3.3.3",
     "mapbox-gl": "^2.7.0",
+    "mongodb": "^4.4.1",
     "mongoose": "^6.2.6",
     "next": "latest",
     "next-auth": "^4.3.1",
